--- a/home.html
+++ b/home.html
@@ -605,7 +605,7 @@
 					</div>
 					<div class="row">
 						<div class="col-12 mb-5">
-							<form action="#" class="p-5 bg-white">
+							<form action="mail.php" class="p-5 bg-white">
 								<!-- <h2 class="h4 text-black mb-5">Contact Form</h2> -->
 								<div class="row form-group">
 									<div class="col-md-12 mb-3 mb-md-0">
@@ -669,7 +669,7 @@
 						<div class="col-md-4">
 							<div class="mb-4">
 								<h2 class="footer-heading mb-4">Subscribe Newsletter</h2>
-								<form action="#" method="post" class="footer-subscribe">
+								<form action="mail.php" method="post" class="footer-subscribe">
 									<div class="input-group mb-3">
 										<input type="text" class="form-control border-secondary text-white bg-transparent"
 											placeholder="Escribe tu correo" aria-label="Enter Email" aria-describedby="button-addon2">
