add benefict section images

--- a/home.html
+++ b/home.html
@@ -37,7 +37,7 @@
 							<!-- <h1 class="mb-0 site-logo"><a href="index.html" class="h2 mb-0">Pointer<span class="text-primary">.</span>
 								</a></h1> -->
 							<h1 class="mb-0 site-logo">
-								<a href="index.html" class="h2 mb-0">Fivo</a>
+								<a href="#" class="h2 mb-0">Fivo</a>
 							</h1>
 						</div>
 						<div class="col-12 col-md-10 d-none d-xl-block">
@@ -59,25 +59,23 @@
 					</div>
 				</div>
 			</header>
-			<div class="site-blocks-cover overlay" style="background-image: url(images/hero_2.jpg);" data-aos="fade"
+			<div class="site-blocks-cover overlay" style="background-image: url(images/banner.jpg); background-position: center; background-repeat: no-repeat; background-size: contain; background-color: #176879;" data-aos="fade"
 				id="home-section">
 				<div class="container">
-					<div class="row align-items-center justify-content-center">
-						<div class="col-md-10 mt-lg-5 text-center">
+					<div class="row banner-content align-items-md-center align-items-sm-start">
+						<div class="col-md-6">
 							<h1>La mejor manera de cambiar tu dinero</h1>
-							<p class="mb-4">Accedé a los mejores precios en un mercado totalmente regido por la oferta y la demanda, sin intermediarios.</p>
-							<p>¿Querés saber mas?</p>
+							<p class="col-md-10 mb-4 p-0">Accedé a los mejores precios en un mercado totalmente regido por la oferta y la demanda, sin intermediarios.</p>
 							<div>
-								<form action="mail.php" method="post" class="d-flex justify-content-center footer-subscribe">
-									<div class="col-md-6 input-group mb-3">
-										<input type="text" class="form-control"
+								<!-- <form class="d-flex flex-column footer-subscribe">
+									<div class="col-md-6 p-0">
+										<input type="text" class="form-control mb-1" id="lead-email-header"
 											placeholder="Escribe tu correo" aria-label="Enter Email" aria-describedby="button-addon2">
-										<div class="input-group-append">
-											<button class="btn btn-accent" type="button" id="button-addon2">Enviar</button>
-										</div>
+										<button class="btn btn-accent col-12" type="button" id="lead-contact-header">Enviar</button>
 									</div>
-									<!-- <a href="#contact-us" class="btn btn-primary mr-2 mb-2">Contactar</a> -->
-								</form>
+									
+								</form> -->
+								<a href="#contact-us" class="btn btn-accent col-md-6">Contactar</a>
 							</div>
 						</div>
 					</div>
@@ -247,89 +245,83 @@
 			</section> -->
 			<section class="site-section" id="beneficts">
 				<div class="container">
-					<div class="row mb-5">
+					<div class="row">
 						<div class="col-12 text-center">
 							<h2 class="section-title mb-3">Beneficios</h2>
 						</div>
 					</div>
-					<div class="row mb-5">
-						<div class="col-lg-6">
-							<h2 class="section-sub-title mb-5">Ahorra en tiempo y dinero</h2>
-							<div class="feature-list mb-5">
+					<div class="row">
+						<div class="col-lg-6 d-flex flex-column justify-content-center">
+							<h2 class="section-sub-title mb-4">Ahorra en tiempo y dinero</h2>
+							<div class="feature-list mb-4">
 								<ul class="fa-ul">
-									<li><span class="fa-li"><i class="fas fa-check-circle fa-accent"></i></span>Enviá y cambiá tu dinero en tiempo real</li>
-									<li><span class="fa-li"><i class="fas fa-check-circle fa-accent"></i></span>Obtené las mejores tazas de cambio regidas por la oferta y la demanda</li>
-									<li><span class="fa-li"><i class="fas fa-check-circle fa-accent"></i></span>Disponible las 24 horas, los 7 días de la semana</li>
+									<li><span class="fa-li"><i class="fas fa-check fa-primary"></i></span>Enviá y cambiá tu dinero en tiempo real</li>
+									<li><span class="fa-li"><i class="fas fa-check fa-primary"></i></span>Obtené las mejores tazas de cambio regidas por la oferta y la demanda</li>
+									<li><span class="fa-li"><i class="fas fa-check fa-primary"></i></span>Disponible las 24 horas, los 7 días de la semana</li>
 								</ul>
 							</div>
-							<p><a href="#" class="btn btn-primary mr-2 mb-2">Conocer mas</a></p>
+							<p class="m-0"><a href="#contact-us" class="btn btn-primary">Conocer mas</a></p>
 						</div>
 						<div class="col-lg-6">
-							<figure class="mb-4 d-flex align-items-center justify-content-center">
-								<div><img src="images/slide_1.jpg" alt="Image" class="img-fluid"></div>
-							</figure>
+							<img src="images/benefict-01.svg" alt="Image" class="img-fluid">
 						</div>
 					</div>
-					<div class="row mb-5">
+					<div class="row">
 						<div class="col-lg-6">
-							<figure class="mb-4 d-flex align-items-center justify-content-center">
-								<div><img src="images/slide_2.jpg" alt="Image" class="img-fluid"></div>
-							</figure>
+							<img src="images/benefict-02.svg" alt="Image" class="img-fluid">
 						</div>
-						<div class="col-lg-6">
-							<h2 class="section-sub-title mb-5">Enviá dinero a otros usuarios</h2>
-							<div class="feature-list mb-5">
+						<div class="col-lg-6 d-flex flex-column justify-content-center">
+							<h2 class="section-sub-title mb-4">Enviá dinero a otros usuarios</h2>
+							<div class="feature-list mb-4">
 								<ul class="fa-ul">
-									<li><span class="fa-li"><i class="fas fa-check-circle fa-accent"></i></span>Enviá dinero a cualquier otro usuario dentro del sistema</li>
-									<li><span class="fa-li"><i class="fas fa-check-circle fa-accent"></i></span>Utilizá cualquier moneda disponible para especificar tanto el origen como el destino</li>
+									<li><span class="fa-li"><i class="fas fa-check fa-primary"></i></span>Enviá dinero a cualquier otro usuario dentro del sistema</li>
+									<li><span class="fa-li"><i class="fas fa-check fa-primary"></i></span>Utilizá cualquier moneda disponible para especificar tanto el origen como el destino</li>
 								</ul>
 							</div>
-							<p><a href="#" class="btn btn-primary mr-2 mb-2">Conocer mas</a></p>
+							<p class="m-0"><a href="#contact-us" class="btn btn-primary">Conocer mas</a></p>
 						</div>
 					</div>
-					<div class="row mb-5">
-						<div class="col-lg-6">
-							<h2 class="section-sub-title mb-5">Participá activamente en el mercado</h2>
-							<div class="feature-list mb-5">
+					<div class="row">
+						<div class="col-lg-6 d-flex flex-column justify-content-center">
+							<h2 class="section-sub-title mb-4">Participá activamente en el mercado</h2>
+							<div class="feature-list mb-4">
 								<ul class="fa-ul">
-									<li><span class="fa-li"><i class="fas fa-check-circle fa-accent"></i></span>
+									<li><span class="fa-li"><i class="fas fa-check fa-primary"></i></span>
 										Creá tus propias ofertas de compra y venta con la tasa que estimes conveniente</li>
-									<li><span class="fa-li"><i class="fas fa-check-circle fa-accent"></i></span>
+									<li><span class="fa-li"><i class="fas fa-check fa-primary"></i></span>
 										Accedé a los precios únicos que representan el valor real en el mercado</li>
-									<li><span class="fa-li"><i class="fas fa-check-circle fa-accent"></i></span>
+									<li><span class="fa-li"><i class="fas fa-check fa-primary"></i></span>
 										Recibí notificaciones en tiempo real cuando tus ofertas sean consumidas
 									  ya sea de forma parcial o total</li>
 								</ul>
 							</div>
-							<p><a href="#" class="btn btn-primary mr-2 mb-2">Conocer mas</a></p>
+							<p class="m-0"><a href="#contact-us" class="btn btn-primary">Conocer mas</a></p>
 						</div>
 						<div class="col-lg-6">
-							<figure class="mb-4 d-flex align-items-center justify-content-center">
-								<div><img src="images/slide_3.jpg" alt="Image" class="img-fluid"></div>
-							</figure>
+							<img src="images/benefict-03.svg" alt="Image" class="img-fluid">
 						</div>
 					</div>
-					<div class="row mb-5">
+					<div class="row">
 						<div class="col-lg-6">
-							<figure class="mb-4 d-flex align-items-center justify-content-center">
-								<div><img src="images/slide_4.jpg" alt="Image" class="img-fluid"></div>
-							</figure>
+							<img src="images/benefict-04.svg" alt="Image" class="img-fluid">
+							<!-- <figure class="mb-4 d-flex align-items-center justify-content-center">
+							</figure> -->
 						</div>
-						<div class="col-lg-6">
-							<h2 class="section-sub-title mb-5">Transparencia y seguridad</h2>
-							<div class="feature-list mb-5">
+						<div class="col-lg-6 d-flex flex-column justify-content-center">
+							<h2 class="section-sub-title mb-4">Transparencia y seguridad</h2>
+							<div class="feature-list mb-4">
 								<ul class="fa-ul">
-									<li><span class="fa-li"><i class="fas fa-check-circle fa-accent"></i></span>
+									<li><span class="fa-li"><i class="fas fa-check fa-primary"></i></span>
 										Fivo es totalmente transparente, a diferencia de los bancos no prestamos tu dinero</li>
-									<li><span class="fa-li"><i class="fas fa-check-circle fa-accent"></i></span>
+									<li><span class="fa-li"><i class="fas fa-check fa-primary"></i></span>
 										Publicamos nuestras tenencias financieras en tiempo real</li>
-									<li><span class="fa-li"><i class="fas fa-check-circle fa-accent"></i></span>
+									<li><span class="fa-li"><i class="fas fa-check fa-primary"></i></span>
 										Utilizamos la ultima tecnología en seguridad y protección basada en blockchain</li>
-									<li><span class="fa-li"><i class="fas fa-check-circle fa-accent"></i></span>
+									<li><span class="fa-li"><i class="fas fa-check fa-primary"></i></span>
 										Sin comisiones ocultas, todos los costos son mostrados antes de completar una operación</li>
 								</ul>
 							</div>
-							<p><a href="#" class="btn btn-primary mr-2 mb-2">Conocer mas</a></p>
+							<p class="m-0"><a href="#contact-us" class="btn btn-primary">Conocer mas</a></p>
 						</div>
 					</div>
 				</div>
@@ -377,61 +369,79 @@
 					<div class="row align-items-stretch">
 						<div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
 							<div class="bg-white p-4 shadow-sm text-center unit-4">
-								<div class="unit-4-icon m-3"><span class="text-primary icon-autorenew"></span></div>
+								<div class="unit-4-icon">
+									<img src="images/register.svg" class="mb-3"  height="100px" width="100px" alt="Depositar">
+								</div>
 								<div class="d-flex flex-column justify-content-between">
 									<h5 class="text-black mb-3">1. Registrate gratis</h5>
-									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi
-										at.</p>
+									<p>Registrate desde la página web de forma gratuita. 
+										Todo lo que necesitás es tu email o una cuenta de Google o Facebook.</p>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="100">
 							<div class="bg-white p-4 shadow-sm text-center unit-4">
-								<div class="unit-4-icon m-3"><span class="text-primary icon-backspace"></span></div>
+								<div class="unit-4-icon">
+									<img src="images/open-account.svg" class="mb-3"  height="100px" width="100px" alt="Depositar">
+								</div>
 								<div class="d-flex flex-column justify-content-between">
 									<h5 class="text-black mb-3">2. Abrí cuentas en distintas monedas</h5>
-									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi
-										at.</p>
+									<p>Agregá cuentas sin restricciones ni demoras.
+										Te mostraremos una lista con todas las monedas disponibles y con un simple click podrás activarlas.
+									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="200">
 							<div class="bg-white p-4 shadow-sm text-center unit-4">
-								<div class="unit-4-icon m-3"><span class="text-primary icon-av_timer"></span></div>
+								<div class="unit-4-icon">
+									<img src="images/deposit.svg" class="mb-3"  height="100px" width="100px" alt="Depositar">
+								</div>
 								<div class="d-flex flex-column justify-content-between">
 									<h5 class="text-black mb-3">3. Depositá en la cuenta</h5>
-									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi
-										at.</p>
+									<p>Enviá tu dinero a través de los distintos medios de pago disponible.
+										Te mostraremos las comisiones en cada caso y cuanto llegará a tu cuenta.
+									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="300">
 							<div class="bg-white p-4 shadow-sm text-center unit-4">
-								<div class="unit-4-icon m-3"><span class="text-primary icon-beenhere"></span></div>
+								<div class="unit-4-icon">
+									<img src="images/free-market.svg" class="mb-3"  height="100px" width="100px" alt="Depositar">
+								</div>
 								<div class="d-flex flex-column justify-content-between">
-									<h5 class="text-black mb-3">4. Accedé a la liquidés del mercado</h5>
-									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi
-										at.</p>
+									<h5 class="text-black mb-3">4. Accedé directamente al mercado</h5>
+									<p>Descubrí el valor real de tu dinero sin intermediarios.
+										En un mercado totalmente regido por la oferta y la demanada y con una posición activa contribuirás a
+										formar dicho valor. 
+									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="400">
 							<div class="bg-white p-4 shadow-sm text-center unit-4">
-								<div class="unit-4-icon m-3"><span class="text-primary icon-business_center"></span></div>
+								<div class="unit-4-icon">
+									<img src="images/confirm.svg" class="mb-3"  height="100px" width="100px" alt="Depositar">
+								</div>
 								<div class="d-flex flex-column justify-content-between">
 									<h5 class="text-black mb-3">5. Confirmá la operación deseada</h5>
-									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi
-										at.</p>
+									<p>Podés elegir consumir de las ofertas realizadas por otros usuarios o crear tus propias ofertas.
+										De ti depende definir el precio que mejor se ajusta a tus necesidades.
+									</p>
 								</div>
 							</div>
 						</div>
 						<div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up" data-aos-delay="500">
 							<div class="bg-white p-4 shadow-sm text-center unit-4">
-								<div class="unit-4-icon m-3"><span class="text-primary icon-cloud_done"></span></div>
+								<div class="unit-4-icon">
+									<img src="images/done.svg" class="mb-3"  height="100px" width="100px" alt="Depositar">
+								</div>
 								<div class="d-flex flex-column justify-content-between">
-									<h5 class="text-black mb-3">6. ¡Listo!</h5>
-									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi
-										at.</p>
+									<h5 class="text-black mb-3">6. ¡Eso es todo!</h5>
+									<p>¡Listo! Nosotros nos ocupamos del resto. 
+										Garantizando que tus operaciones se realizen en tiempo real, dismuyendo el tiempo y aumentando la eficiencia de tu dinero.
+									</p>
 								</div>
 							</div>
 						</div>
@@ -604,19 +614,27 @@
 						</div>
 					</div>
 					<div class="row">
+						<div class="col-12">
+							<div id="contact-alert" class="alert alert-success text-center alert-dismissible fade show" style="display: none">
+								<button type="button" class="close" data-dismiss="alert">&times;</button>
+								<strong>Gracias!</strong> Nos pondremos en contacto a la brevedad.
+							</div>
+						</div>
+					</div>
+					<div class="row">
 						<div class="col-12 mb-5">
-							<form action="#" class="p-5 bg-white">
+							<form id="contactus" class="p-5 bg-white">
 								<!-- <h2 class="h4 text-black mb-5">Contact Form</h2> -->
 								<div class="row form-group">
 									<div class="col-md-12 mb-3 mb-md-0">
-										<label class="text-black" for="fname">Nombre</label>
-										<input type="text" id="fname" class="form-control">
+										<label class="text-black" for="name">Nombre</label>
+										<input type="text" name="name" id="name" class="form-control">
 									</div>
 								</div>
 								<div class="row form-group">
 									<div class="col-md-12">
-										<label class="text-black" for="email">Correo</label>
-										<input type="email" id="email" class="form-control">
+										<label class="text-black" for="cemail">Correo</label>
+										<input type="email" name="email" id="cemail" class="form-control">
 									</div>
 								</div>
 								<div class="row form-group">
@@ -628,7 +646,7 @@
 								</div>
 								<div class="row form-group">
 									<div class="col-md-12">
-										<input type="submit" value="Enviar Mensaje" class="btn btn-info btn-md text-white">
+										<button type="button" id="contact" class="btn btn-info btn-md text-white">Enviar Mensaje</button>
 									</div>
 								</div>
 							</form>
@@ -652,12 +670,14 @@
 						<div class="col-md-8">
 							<div class="row">
 								<div class="col-md-5">
-									<h2 class="footer-heading mb-4">About Us</h2>
-									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque facere laudantium magnam voluptatum
-										autem. Amet aliquid nesciunt veritatis aliquam.</p>
+									<h2 class="footer-heading mb-4">Quienes somos</h2>
+									<p>Fivo es un equipo dedicado a llevar las finanzas al siguente nivel.
+										Juntos trabajamos para crear un sistema donde puedas utilizar tu dinero en la web de igual manera
+										a como lo hacés con cualquier otra información.
+									</p>
 								</div>
 								<div class="col-md-3 ml-auto">
-									<h2 class="footer-heading mb-4">Quick Links</h2>
+									<h2 class="footer-heading mb-4">Enlaces de Interés</h2>
 									<ul class="list-unstyled">
 										<li><a href="#beneficts">Beneficios</a></li>
 										<li><a href="#how-works">¿Como funciona?</a></li>
@@ -668,13 +688,13 @@
 						</div>
 						<div class="col-md-4">
 							<div class="mb-4">
-								<h2 class="footer-heading mb-4">Subscribe Newsletter</h2>
-								<form action="#" method="post" class="footer-subscribe">
+								<h2 class="footer-heading mb-4">¿Querés saber más?</h2>
+								<form action="mail.php" method="post" class="footer-subscribe">
 									<div class="input-group mb-3">
-										<input type="text" class="form-control border-secondary text-white bg-transparent"
-											placeholder="Escribe tu correo" aria-label="Enter Email" aria-describedby="button-addon2">
+										<input type="text" class="form-control border-secondary text-white bg-transparent" id="lead-email-footer"
+											placeholder="Escribe tu correo" aria-label="Enter Email" aria-describedby="button-addon2" name="lead-email-footer">
 										<div class="input-group-append">
-											<button class="btn btn-accent" type="button" id="button-addon2">Enviar</button>
+											<button class="btn btn-accent" type="button" id="contact-footer">Enviar</button>
 										</div>
 									</div>
 								</form>
@@ -719,6 +739,7 @@
 		<script src="js/jquery.fancybox.min.js"></script>
 		<script src="js/jquery.sticky.js"></script>
 		<script src="js/main.js"></script>
+		<script src="js/send-form.js"></script>
 	</body>
 
 </html>
