--- a/home.html
+++ b/home.html
@@ -59,13 +59,13 @@
 					</div>
 				</div>
 			</header>
-			<div class="site-blocks-cover overlay" style="background-image: url(images/banner.jpg); background-position: center; background-repeat: no-repeat; background-size: contain; background-color: #176879;" data-aos="fade"
+			<div class="banner site-blocks-cover overlay" data-aos="fade"
 				id="home-section">
 				<div class="container">
-					<div class="row banner-content align-items-md-center align-items-sm-start">
-						<div class="col-md-6">
+					<div class="row banner-content">
+						<div class="col-md-8 col-lg-8 col-xl-6">
 							<h1>La mejor manera de cambiar tu dinero</h1>
-							<p class="col-md-10 mb-4 p-0">Accedé a los mejores precios en un mercado totalmente regido por la oferta y la demanda, sin intermediarios.</p>
+							<p class="col-xl-10 mb-4 p-0">Accedé a los mejores precios en un mercado totalmente regido por la oferta y la demanda, sin intermediarios.</p>
 							<div>
 								<!-- <form class="d-flex flex-column footer-subscribe">
 									<div class="col-md-6 p-0">
@@ -75,7 +75,7 @@
 									</div>
 									
 								</form> -->
-								<a href="#contact-us" class="btn btn-accent col-md-6">Contactar</a>
+								<a href="#contact-us" class="btn btn-accent col-xl-6">Contactar</a>
 							</div>
 						</div>
 					</div>
