smothly scroll to contact form from every CTA

--- a/home.html
+++ b/home.html
@@ -75,7 +75,7 @@
 									</div>
 									
 								</form> -->
-								<a href="#contact-us" class="btn btn-accent col-xl-6">Contactar</a>
+								<a href="#contact-us" class="btn btn-accent col-xl-6 contactus">Contactar</a>
 							</div>
 						</div>
 					</div>
@@ -260,7 +260,7 @@
 									<li><span class="fa-li"><i class="fas fa-check fa-primary"></i></span>Disponible las 24 horas, los 7 días de la semana</li>
 								</ul>
 							</div>
-							<p class="m-0"><a href="#contact-us" class="btn btn-primary">Conocer mas</a></p>
+							<p class="m-0"><a href="#contact-us" class="btn btn-primary contactus">Conocer mas</a></p>
 						</div>
 						<div class="col-lg-6">
 							<img src="images/benefict-01.svg" alt="Image" class="img-fluid">
@@ -278,7 +278,7 @@
 									<li><span class="fa-li"><i class="fas fa-check fa-primary"></i></span>Utilizá cualquier moneda disponible para especificar tanto el origen como el destino</li>
 								</ul>
 							</div>
-							<p class="m-0"><a href="#contact-us" class="btn btn-primary">Conocer mas</a></p>
+							<p class="m-0"><a href="#contact-us" class="btn btn-primary contactus">Conocer mas</a></p>
 						</div>
 					</div>
 					<div class="row">
@@ -295,7 +295,7 @@
 									  ya sea de forma parcial o total</li>
 								</ul>
 							</div>
-							<p class="m-0"><a href="#contact-us" class="btn btn-primary">Conocer mas</a></p>
+							<p class="m-0"><a href="#contact-us" class="btn btn-primary contactus">Conocer mas</a></p>
 						</div>
 						<div class="col-lg-6">
 							<img src="images/benefict-03.svg" alt="Image" class="img-fluid">
@@ -321,7 +321,7 @@
 										Sin comisiones ocultas, todos los costos son mostrados antes de completar una operación</li>
 								</ul>
 							</div>
-							<p class="m-0"><a href="#contact-us" class="btn btn-primary">Conocer mas</a></p>
+							<p class="m-0"><a href="#contact-us" class="btn btn-primary contactus">Conocer mas</a></p>
 						</div>
 					</div>
 				</div>
