change primary, accent button styles

--- a/home.html
+++ b/home.html
@@ -64,8 +64,9 @@
 				<div class="container">
 					<div class="row banner-content">
 						<div class="col-md-8 col-lg-8 col-xl-6">
-							<h1>La mejor manera de cambiar tu dinero</h1>
-							<p class="col-xl-10 mb-4 p-0">Accedé a los mejores precios en un mercado totalmente regido por la oferta y la demanda, sin intermediarios.</p>
+							<h1>Evolucioná tus finanzas al siguiente nivel</h1>
+							<p class="col-xl-10 mb-4 p-0">Hacé uso de tu dinero de manera similar a como lo hacés con la información en la web:
+								rápido, seguro y eficiente. </p>
 							<div>
 								<!-- <form class="d-flex flex-column footer-subscribe">
 									<div class="col-md-6 p-0">
