--- a/home.html
+++ b/home.html
@@ -18,6 +18,13 @@
 		<link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
 		<link rel="stylesheet" href="css/aos.css">
 		<link rel="stylesheet" href="css/style.css">
+		<!-- Google Tag Manager -->
+		<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+			new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+			j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+			'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+			})(window,document,'script','dataLayer','GTM-5VB3NV3');</script>
+	<!-- End Google Tag Manager -->
 	</head>
 
 	<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
