nagivate smothly from footer to contact form

--- a/home.html
+++ b/home.html
@@ -689,7 +689,7 @@
 									<ul class="list-unstyled">
 										<li><a href="#beneficts">Beneficios</a></li>
 										<li><a href="#how-works">¿Como funciona?</a></li>
-										<li><a href="#contact-us">Contactar</a></li>
+										<li><a href="#contact-us" class="contactus">Contactar</a></li>
 									</ul>
 								</div>
 							</div>
