add popover when submit email address from footer

--- a/home.html
+++ b/home.html
@@ -702,7 +702,10 @@
 										<input type="text" class="form-control border-secondary text-white bg-transparent" id="lead-email-footer"
 											placeholder="Escribe tu correo" aria-label="Enter Email" aria-describedby="button-addon2" name="lead-email-footer">
 										<div class="input-group-append">
-											<button class="btn btn-accent" type="button" id="contact-footer">Enviar</button>
+											<button class="btn btn-accent" type="button" id="contact-footer" 
+											data-toggle="popover" 
+											title="¡Gracias por tu interés!" 
+											data-content="Estaremos en contacto a la brevedad">Enviar</button>
 										</div>
 									</div>
 								</form>
