change subtitle and popover wording and style

--- a/home.html
+++ b/home.html
@@ -72,8 +72,7 @@
 					<div class="row banner-content">
 						<div class="col-md-8 col-lg-8 col-xl-6">
 							<h1>Evolucioná tus finanzas al siguiente nivel</h1>
-							<p class="col-xl-10 mb-4 p-0">Hacé uso de tu dinero de manera similar a como lo hacés con la información en la web:
-								rápido, seguro y eficiente. </p>
+							<p class="col-xl-10 mb-4 p-0">Hacé uso de tu dinero de manera rápida, seguro y eficiente, similar a como lo hacés con la información en la internet.</p>
 							<div>
 								<!-- <form class="d-flex flex-column footer-subscribe">
 									<div class="col-md-6 p-0">
@@ -268,7 +267,7 @@
 									<li><span class="fa-li"><i class="fas fa-check fa-primary"></i></span>Disponible las 24 horas, los 7 días de la semana</li>
 								</ul>
 							</div>
-							<p class="m-0"><a href="#contact-us" class="btn btn-primary contactus">Conocer mas</a></p>
+							<p class="m-0"><a href="#contact-us" class="btn btn-primary contactus">Conocer más</a></p>
 						</div>
 						<div class="col-lg-6">
 							<img src="images/benefict-01.svg" alt="Image" class="img-fluid">
@@ -286,7 +285,7 @@
 									<li><span class="fa-li"><i class="fas fa-check fa-primary"></i></span>Utilizá cualquier moneda disponible para especificar tanto el origen como el destino</li>
 								</ul>
 							</div>
-							<p class="m-0"><a href="#contact-us" class="btn btn-primary contactus">Conocer mas</a></p>
+							<p class="m-0"><a href="#contact-us" class="btn btn-primary contactus">Conocer más</a></p>
 						</div>
 					</div>
 					<div class="row">
@@ -303,7 +302,7 @@
 									  ya sea de forma parcial o total</li>
 								</ul>
 							</div>
-							<p class="m-0"><a href="#contact-us" class="btn btn-primary contactus">Conocer mas</a></p>
+							<p class="m-0"><a href="#contact-us" class="btn btn-primary contactus">Conocer más</a></p>
 						</div>
 						<div class="col-lg-6">
 							<img src="images/benefict-03.svg" alt="Image" class="img-fluid">
@@ -329,7 +328,7 @@
 										Sin comisiones ocultas, todos los costos son mostrados antes de completar una operación</li>
 								</ul>
 							</div>
-							<p class="m-0"><a href="#contact-us" class="btn btn-primary contactus">Conocer mas</a></p>
+							<p class="m-0"><a href="#contact-us" class="btn btn-primary contactus">Conocer más</a></p>
 						</div>
 					</div>
 				</div>
@@ -617,15 +616,14 @@
 					<div class="row mb-5">
 						<div class="col-12 text-center">
 							<h2 class="section-title mb-3">Contactanos</h2>
-							<p>Respondemos con gusto cualquier pregunta que puedas tener. 
-								Solo envíanos un mensaje con tus comentarios</p>
+							<p>¿Querés saber más? Dejanos tus datos para mantenerte informado.</p>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-12">
 							<div id="contact-alert" class="alert alert-success text-center alert-dismissible fade show" style="display: none">
 								<button type="button" class="close" data-dismiss="alert">&times;</button>
-								<strong>Gracias!</strong> Nos pondremos en contacto a la brevedad.
+								<strong>¡Gracias!</strong> Estaremos en contacto a la brevedad.
 							</div>
 						</div>
 					</div>
@@ -704,8 +702,8 @@
 										<div class="input-group-append">
 											<button class="btn btn-accent" type="button" id="contact-footer" 
 											data-toggle="popover" 
-											title="¡Gracias por tu interés!" 
-											data-content="Estaremos en contacto a la brevedad">Enviar</button>
+											title="¡Gracias!" 
+											data-content="Estaremos en contacto a la brevedad.">Enviar</button>
 										</div>
 									</div>
 								</form>
