chnage text black to brown

--- a/home.html
+++ b/home.html
@@ -380,7 +380,7 @@
 									<img src="images/register.svg" class="mb-3"  height="100px" width="100px" alt="Depositar">
 								</div>
 								<div class="d-flex flex-column justify-content-between">
-									<h5 class="text-black mb-3">1. Registrate gratis</h5>
+									<h5 class="text-brown mb-3">1. Registrate gratis</h5>
 									<p>Registrate desde la página web de forma gratuita. 
 										Todo lo que necesitás es tu email o una cuenta de Google o Facebook.</p>
 								</div>
@@ -392,7 +392,7 @@
 									<img src="images/open-account.svg" class="mb-3"  height="100px" width="100px" alt="Depositar">
 								</div>
 								<div class="d-flex flex-column justify-content-between">
-									<h5 class="text-black mb-3">2. Abrí cuentas en distintas monedas</h5>
+									<h5 class="text-brown mb-3">2. Abrí cuentas en distintas monedas</h5>
 									<p>Agregá cuentas sin restricciones ni demoras.
 										Te mostraremos una lista con todas las monedas disponibles y con un simple click podrás activarlas.
 									</p>
@@ -405,7 +405,7 @@
 									<img src="images/deposit.svg" class="mb-3"  height="100px" width="100px" alt="Depositar">
 								</div>
 								<div class="d-flex flex-column justify-content-between">
-									<h5 class="text-black mb-3">3. Depositá en la cuenta</h5>
+									<h5 class="text-brown mb-3">3. Depositá en la cuenta</h5>
 									<p>Enviá tu dinero a través de los distintos medios de pago disponible.
 										Te mostraremos las comisiones en cada caso y cuanto llegará a tu cuenta.
 									</p>
@@ -418,7 +418,7 @@
 									<img src="images/free-market.svg" class="mb-3"  height="100px" width="100px" alt="Depositar">
 								</div>
 								<div class="d-flex flex-column justify-content-between">
-									<h5 class="text-black mb-3">4. Accedé directamente al mercado</h5>
+									<h5 class="text-brown mb-3">4. Accedé directamente al mercado</h5>
 									<p>Descubrí el valor real de tu dinero sin intermediarios.
 										En un mercado totalmente regido por la oferta y la demanada y con una posición activa contribuirás a
 										formar dicho valor. 
@@ -432,7 +432,7 @@
 									<img src="images/confirm.svg" class="mb-3"  height="100px" width="100px" alt="Depositar">
 								</div>
 								<div class="d-flex flex-column justify-content-between">
-									<h5 class="text-black mb-3">5. Confirmá la operación deseada</h5>
+									<h5 class="text-brown mb-3">5. Confirmá la operación deseada</h5>
 									<p>Podés elegir consumir de las ofertas realizadas por otros usuarios o crear tus propias ofertas.
 										De ti depende definir el precio que mejor se ajusta a tus necesidades.
 									</p>
@@ -445,7 +445,7 @@
 									<img src="images/done.svg" class="mb-3"  height="100px" width="100px" alt="Depositar">
 								</div>
 								<div class="d-flex flex-column justify-content-between">
-									<h5 class="text-black mb-3">6. ¡Eso es todo!</h5>
+									<h5 class="text-brown mb-3">6. ¡Eso es todo!</h5>
 									<p>¡Listo! Nosotros nos ocupamos del resto. 
 										Garantizando que tus operaciones se realizen en tiempo real, dismuyendo el tiempo y aumentando la eficiencia de tu dinero.
 									</p>
