--- a/home.html
+++ b/home.html
@@ -261,7 +261,7 @@
 						<div class="col-lg-6 d-flex flex-column justify-content-center">
 							<h2 class="section-sub-title mb-4">Ahorra en tiempo y dinero</h2>
 							<div class="feature-list mb-4">
-								<ul class="fa-ul">
+								<ul class="fa-ul text-brown-light">
 									<li><span class="fa-li"><i class="fas fa-check fa-primary"></i></span>Enviá y cambiá tu dinero en tiempo real</li>
 									<li><span class="fa-li"><i class="fas fa-check fa-primary"></i></span>Obtené las mejores tazas de cambio regidas por la oferta y la demanda</li>
 									<li><span class="fa-li"><i class="fas fa-check fa-primary"></i></span>Disponible las 24 horas, los 7 días de la semana</li>
@@ -280,7 +280,7 @@
 						<div class="col-lg-6 d-flex flex-column justify-content-center">
 							<h2 class="section-sub-title mb-4">Enviá dinero a otros usuarios</h2>
 							<div class="feature-list mb-4">
-								<ul class="fa-ul">
+								<ul class="fa-ul text-brown-light">
 									<li><span class="fa-li"><i class="fas fa-check fa-primary"></i></span>Enviá dinero a cualquier otro usuario dentro del sistema</li>
 									<li><span class="fa-li"><i class="fas fa-check fa-primary"></i></span>Utilizá cualquier moneda disponible para especificar tanto el origen como el destino</li>
 								</ul>
@@ -292,7 +292,7 @@
 						<div class="col-lg-6 d-flex flex-column justify-content-center">
 							<h2 class="section-sub-title mb-4">Participá activamente en el mercado</h2>
 							<div class="feature-list mb-4">
-								<ul class="fa-ul">
+								<ul class="fa-ul text-brown-light">
 									<li><span class="fa-li"><i class="fas fa-check fa-primary"></i></span>
 										Creá tus propias ofertas de compra y venta con la tasa que estimes conveniente</li>
 									<li><span class="fa-li"><i class="fas fa-check fa-primary"></i></span>
@@ -317,7 +317,7 @@
 						<div class="col-lg-6 d-flex flex-column justify-content-center">
 							<h2 class="section-sub-title mb-4">Transparencia y seguridad</h2>
 							<div class="feature-list mb-4">
-								<ul class="fa-ul">
+								<ul class="fa-ul text-brown-light">
 									<li><span class="fa-li"><i class="fas fa-check fa-primary"></i></span>
 										Fivo es totalmente transparente, a diferencia de los bancos no prestamos tu dinero</li>
 									<li><span class="fa-li"><i class="fas fa-check fa-primary"></i></span>
@@ -381,7 +381,7 @@
 								</div>
 								<div class="d-flex flex-column justify-content-between">
 									<h5 class="text-brown mb-3">1. Registrate gratis</h5>
-									<p>Registrate desde la página web de forma gratuita. 
+									<p class="text-brown-light">Registrate desde la página web de forma gratuita. 
 										Todo lo que necesitás es tu email o una cuenta de Google o Facebook.</p>
 								</div>
 							</div>
@@ -393,7 +393,7 @@
 								</div>
 								<div class="d-flex flex-column justify-content-between">
 									<h5 class="text-brown mb-3">2. Abrí cuentas en distintas monedas</h5>
-									<p>Agregá cuentas sin restricciones ni demoras.
+									<p class="text-brown-light">Agregá cuentas sin restricciones ni demoras.
 										Te mostraremos una lista con todas las monedas disponibles y con un simple click podrás activarlas.
 									</p>
 								</div>
@@ -406,7 +406,7 @@
 								</div>
 								<div class="d-flex flex-column justify-content-between">
 									<h5 class="text-brown mb-3">3. Depositá en la cuenta</h5>
-									<p>Enviá tu dinero a través de los distintos medios de pago disponible.
+									<p class="text-brown-light">Enviá tu dinero a través de los distintos medios de pago disponible.
 										Te mostraremos las comisiones en cada caso y cuanto llegará a tu cuenta.
 									</p>
 								</div>
@@ -419,7 +419,7 @@
 								</div>
 								<div class="d-flex flex-column justify-content-between">
 									<h5 class="text-brown mb-3">4. Accedé directamente al mercado</h5>
-									<p>Descubrí el valor real de tu dinero sin intermediarios.
+									<p class="text-brown-light">Descubrí el valor real de tu dinero sin intermediarios.
 										En un mercado totalmente regido por la oferta y la demanada y con una posición activa contribuirás a
 										formar dicho valor. 
 									</p>
@@ -433,7 +433,7 @@
 								</div>
 								<div class="d-flex flex-column justify-content-between">
 									<h5 class="text-brown mb-3">5. Confirmá la operación deseada</h5>
-									<p>Podés elegir consumir de las ofertas realizadas por otros usuarios o crear tus propias ofertas.
+									<p class="text-brown-light">Podés elegir consumir de las ofertas realizadas por otros usuarios o crear tus propias ofertas.
 										De ti depende definir el precio que mejor se ajusta a tus necesidades.
 									</p>
 								</div>
@@ -446,7 +446,7 @@
 								</div>
 								<div class="d-flex flex-column justify-content-between">
 									<h5 class="text-brown mb-3">6. ¡Eso es todo!</h5>
-									<p>¡Listo! Nosotros nos ocupamos del resto. 
+									<p class="text-brown-light">¡Listo! Nosotros nos ocupamos del resto. 
 										Garantizando que tus operaciones se realizen en tiempo real, dismuyendo el tiempo y aumentando la eficiencia de tu dinero.
 									</p>
 								</div>
@@ -616,7 +616,7 @@
 					<div class="row mb-5">
 						<div class="col-12 text-center">
 							<h2 class="section-title mb-3">Contactanos</h2>
-							<p>¿Querés saber más? Dejanos tus datos para mantenerte informado.</p>
+							<p class="text-brown-light">¿Querés saber más? Dejanos tus datos para mantenerte informado.</p>
 						</div>
 					</div>
 					<div class="row">
@@ -633,19 +633,19 @@
 								<!-- <h2 class="h4 text-black mb-5">Contact Form</h2> -->
 								<div class="row form-group">
 									<div class="col-md-12 mb-3 mb-md-0">
-										<label class="text-black" for="name">Nombre</label>
+										<label class="text-brown" for="name">Nombre</label>
 										<input type="text" name="name" id="name" class="form-control">
 									</div>
 								</div>
 								<div class="row form-group">
 									<div class="col-md-12">
-										<label class="text-black" for="cemail">Correo</label>
+										<label class="text-brown" for="cemail">Correo</label>
 										<input type="email" name="email" id="cemail" class="form-control">
 									</div>
 								</div>
 								<div class="row form-group">
 									<div class="col-md-12">
-										<label class="text-black" for="message">Mensaje</label>
+										<label class="text-brown" for="message">Mensaje</label>
 										<textarea name="message" id="message" cols="30" rows="7" class="form-control"
 											placeholder="Escribe tu mensaje aqui..."></textarea>
 									</div>
