add social media

--- a/home.html
+++ b/home.html
@@ -259,7 +259,7 @@
 					</div>
 					<div class="row">
 						<div class="col-lg-6 d-flex flex-column justify-content-center">
-							<h2 class="section-sub-title mb-4">Ahorra en tiempo y dinero</h2>
+							<h2 class="section-sub-title mb-4">Ahorrá en tiempo y dinero</h2>
 							<div class="feature-list mb-4">
 								<ul class="fa-ul text-brown-light">
 									<li><span class="fa-li"><i class="fas fa-check fa-primary"></i></span>Enviá y cambiá tu dinero en tiempo real</li>
@@ -709,11 +709,11 @@
 								</form>
 							</div>
 							<div class="">
-								<h2 class="footer-heading mb-4">Siguenos</h2>
-								<a href="#" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
-								<a href="#" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
-								<a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
-								<a href="#" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
+								<h2 class="footer-heading mb-4">Seguinos</h2>
+								<a href="https://www.facebook.com/FivoLatinAmerica" target="_blank" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
+								<a href="https://twitter.com/FivoLatam" target="_blank" class="pl-3 pr-3"><span class="icon-twitter"></span></a>
+								<a href="https://www.instagram.com/fivolatinamerica/" target="_blank" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
+								<a href="https://www.linkedin.com/company/fivolatinamerica" target="_blank" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
 							</div>
 						</div>
 					</div>
